Fix dark mode style for names

--- a/meo_joule/logip/style.css
+++ b/meo_joule/logip/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-  background-color: #e0dfdf;
+  background-color: #1f1f1f;
+  /* e0dfdf */
   padding: 25px;
   font-family: Montserrat;
   display: flex;
